# ppxxh

./: .gitignore  LICENSE  README.rst  setup.cfg
docs/source/: conf.py  index.rst
src/ppxxh/: __init__.py  _top.py  _xxh32.py  _xxh3_128.py  _xxh3_64.py  _xxh64.py
tests/: test.py
