[metadata]
name = ppxxh
version = 1.0.0
author = Vgbundo
author_email = vgbundo@disroot.org
description = Pure python implementation xxhash algorithms
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/vgbundo/ppxxh
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
keywords = 
    pure python
    hash
    xxh
    xxhash
    xxh32
    xxh64
    xxh3_64
    xxh3_128
    secret generator

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src